[tool.poetry]
name = "simpleproject"
version = "0.1.0"
description = ""
authors = ["Ehsan Gheychisaz <ehsan,ghechisaz82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.1"
pydentic = "^0.0.1-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
